--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -138,6 +138,22 @@
                                     android:textSize="12sp" />
 
                             </RelativeLayout>
+                            <LinearLayout
+                                android:orientation="horizontal"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+                                <Button
+                                    android:text="HD Play"
+                                    android:onClick="HDPlay"
+                                    android:id="@+id/hd_play"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+                                <Button
+                                    android:text="SD Play"
+                                    android:id="@+id/sd_play"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"/>
+                            </LinearLayout>
 
                             <LinearLayout
                                 android:layout_width="match_parent"
