--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -3,10 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/black"
     tools:context=".SimpleVideoPlayer">
 
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+        app:controller_layout_id="@layout/exo_playback_control_viewz"
         android:id="@+id/player_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
