--- a/app/src/main/res/layout/activity_tv_details.xml
+++ b/app/src/main/res/layout/activity_tv_details.xml
@@ -90,7 +90,7 @@
                     android:orientation="vertical">
 
                     <android.support.v7.widget.CardView
-                        android:id="@+id/cardView"
+                        android:id="@+id/click_play"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
