--- a/app/src/main/res/layout/download_row_movie_item.xml
+++ b/app/src/main/res/layout/download_row_movie_item.xml
@@ -14,7 +14,7 @@
         android:id="@+id/click_play"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
+        android:background="@color/tv_text_bg"
         android:orientation="horizontal">
 
         <RelativeLayout
@@ -29,6 +29,7 @@
                 android:layout_alignParentStart="true">
 
                 <com.makeramen.roundedimageview.RoundedImageView
+                    android:layout_margin="2dp"
                     android:id="@+id/image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -43,7 +44,7 @@
                     android:layout_alignParentBottom="true"
                     android:layout_margin="5dp"
                     android:layout_marginTop="5dp"
-                    android:background="@color/black"
+                    android:background="@color/colorPrimary"
                     android:ellipsize="end"
                     android:maxWidth="80dp"
                     android:maxLines="1"
