--- a/app/src/main/res/layout/row_comment_item.xml
+++ b/app/src/main/res/layout/row_comment_item.xml
@@ -7,17 +7,18 @@
     android:layout_marginTop="10dp">
 
     <RelativeLayout
+        android:paddingLeft="15dp"
         android:id="@+id/relativeLayout_comment_adapter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/imageView_comment_adapter"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:scaleType="fitXY"
-            android:src="@mipmap/ic_launcher_round"
+            android:src="@drawable/ic_comment_icon"
             app:riv_corner_radius="5dp" />
 
         <LinearLayout
@@ -41,7 +42,7 @@
                     android:gravity="start">
 
                     <TextView
-                        android:id="@+id/textView_userName_comment_adapter"
+                        android:id="@+id/textView_comment_adapter"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
@@ -70,16 +71,7 @@
 
             </RelativeLayout>
 
-            <TextView
-                android:id="@+id/textView_comment_adapter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="5dp"
-                android:layout_marginTop="5dp"
-                android:maxLines="2"
-                android:text="@string/app_name"
-                android:textColor="@color/comment_sub_text"
-                android:textSize="13sp" />
+
 
         </LinearLayout>
 
